# MedGaze_Demo

medgazear_final/: .gitignore  README.md  pyproject.toml  requirements-tobii.txt
medgazear_final/app/: __init__.py
medgazear_final/configs/: attention_thresholds.yaml
medgazear_final/docs/: TOBII_SETUP.md  evaluation.md  limitations.md  methodology.md  project_journey.md  thesis_outline.md  validation_plan.md
medgazear_final/scripts/: 01_scan_dicom_dataset.py  02_extract_seg_roi_geometry.py  03_generate_behavior_labeled_synthetic_gaze.py  04_extract_roi_scanpath_features.py  05_run_rule_attention_engine.py  06_train_rule_distillation_audit.py  07_run_deleaked_rule_audit.py  08_train_behavior_learning_models.py  08c_run_evaluation_integrity_suite.py  08d_run_feature_parity_audit.py  08e_run_seg_spatial_fidelity_ablation.py  09_evaluate_behavior_learning_model.py  09b_behavior_robustness_audit.py  10_run_cognitive_load_proxy_analysis.py  11_generate_gaze_visualizations.py  20_launch_review_workstation.py  21_check_tobii_sdk.py  __init__.py  _common.py
medgazear_final/tests/: test_behavior_learning.py  test_behavior_robustness_audit.py  test_cognitive_load_proxy.py  test_dicom_scanner.py  test_feature_leakage.py  test_foundation.py  test_gaze_visualization.py  test_review_workstation_ui.py  test_roi_feature_extractor.py  test_roi_geometry.py  test_roi_matcher.py  test_rule_attention_engine.py  test_rule_distillation_audit.py  test_scanpath_feature_extractor.py  test_seg_spatial_fidelity.py  test_synthetic_gaze.py  test_temporal_feature_extractor.py  (+1 more)
(+106 files in other folders)
