[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medgazear-final"
version = "0.1.0"
description = "Foundation scaffold for a non-clinical MedGazeAR thesis prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["joblib>=1.3", "numpy>=2.0", "pandas>=2.0", "pillow>=10.0", "pydicom>=3.0", "PyQt6>=6.6", "scikit-learn>=1.7.2"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
